--- a/maze.css
+++ b/maze.css
@@ -1,15 +1,12 @@
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* Apply styles */
 html, body {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     background-color: #def;
     font-family: 'Poppins', sans-serif;
 }
@@ -19,18 +16,19 @@ html, body {
 }
 
 #mazeContainer {
-    top: 15px;
+    margin: 0 auto;
     opacity: 0;
     display: inline-block;
-    margin: auto;
     border-radius: 10px;
 }
+
 #mazeContainer #mazeCanvas {
     margin: 0;
     display: block;
-    border: solid 2px black;
+    border: 2px solid black;
     height: 400px;
 }
+
 input, select {
     cursor: pointer;
     background-color: rgba(40, 0, 0, 0.30);
@@ -46,18 +44,23 @@ input, select {
     text-decoration: none;
     appearance: none;
 }
+
 input:hover, select:hover {
-	background-color: rgba(20, 10, 30, 0.70);
+    background-color: rgba(20, 10, 30, 0.70);
 }
+
 input:active, select:active {
-	background-color: blue;
+    background-color: blue;
 }
+
 input:focus, select:focus {
-	outline: none;
+    outline: none;
 }
+
 .custom-select {
-	display: inline-block;
+    display: inline-block;
 }
+
 .custom-select select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -65,12 +68,10 @@ input:focus, select:focus {
     background-repeat: no-repeat;
     background-position: 125px center;
 }
+
 #Message-Container {
     visibility: hidden;
     color: white;
-    display: block;
-    width: 100vw;
-    height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
@@ -79,6 +80,7 @@ input:focus, select:focus {
     background-color: rgba(10, 0, 0, 0.30);
     z-index: 1;
 }
+
 #Message-Container #message {
     width: 300px;
     height: 300px;
@@ -88,24 +90,28 @@ input:focus, select:focus {
     margin-left: -150px;
     margin-top: -150px;
 }
+
 #page {
-	text-align: center;
-	height: auto;
-	width: auto;
-	margin: auto;
+    text-align: center;
+    height: auto;
+    width: auto;
+    margin: auto;
 }
+
 #page #menu {
     margin: auto;
     padding: 10px;
     height: 65px;
     box-sizing: border-box;
 }
+
 #page #menu h1 {
     margin: 0;
     margin-bottom: 10px;
     font-weight: 600;
     font-size: 3.2rem;
 }
+
 #page #view {
     position: absolute;
     top: 65px;
@@ -115,18 +121,20 @@ input:focus, select:focus {
     width: 100%;
     height: auto;
 }
+
 .border {
-    border: 10px black solid;
+    border: 10px solid black;
     border-radius: 10px;
 }
 
 #instructions {
     margin-top: 425px;
 }
- 
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 400px) {
-	input, select {
-	    width: 120px;
-	}
+    input, select {
+        width: 120px;
+    }
 }
+
