--- a/maze.css
+++ b/maze.css
@@ -10,7 +10,7 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #fff;
+    background-color: #ebf;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -28,8 +28,8 @@ html, body {
 #mazeContainer #mazeCanvas {
     margin: 0;
     display: block;
-    border: solid 2px black;
-    height: 400px;
+    border: solid 4px green;
+    height: 800px;
 }
 input, select {
     cursor: pointer;
