--- a/maze.css
+++ b/maze.css
@@ -1,5 +1,7 @@
+/* Importing Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* Resetting default styles and setting up base styles */
 html, body {
     width: 100vw;
     height: 100vh;
@@ -10,54 +12,70 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #ebf;
-    font-family: 'Poppins', sans-serif;
+    background-color: #ebf; /* Setting background color */
+    font-family: 'Poppins', sans-serif; /* Using Poppins font */
 }
 
+/* Styling for the main view container */
 #view {
-    margin-top: 30px;
+    margin-top: 30px; /* Adding margin to the top */
 }
 
+/* Styling for the maze container */
 #mazeContainer {
-    top: 15px;
-    opacity: 0;
-    display: inline-block;
-    margin: auto;
-    border-radius: 10px;
+    top: 15px; /* Positioning from the top */
+    opacity: 0; /* Initially hiding the maze container */
+    display: inline-block; /* Displaying as inline-block */
+    margin: auto; /* Centering horizontally */
+    border-radius: 10px; /* Adding border radius */
 }
+
+/* Styling for the maze canvas */
 #mazeContainer #mazeCanvas {
     margin: 0;
     display: block;
-    border: solid 2px green;
-    height: 400px;
+    border: solid 2px green; /* Adding a green border */
+    height: 400px; /* Setting height */
 }
+
+/* Styling for input and select elements */
 input, select {
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.30);
-    height: 45px;
-    width: 150px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    color: white;
+    background-color: rgba(0, 0, 0, 0.30); /* Setting background color */
+    height: 45px; /* Setting height */
+    width: 150px; /* Setting width */
+    padding: 10px; /* Adding padding */
+    border: none; /* Removing border */
+    border-radius: 5px; /* Adding border radius */
+    color: white; /* Setting text color */
     display: inline-block;
-    font-size: 15px;
-    text-align: center;
+    font-size: 15px; /* Setting font size */
+    text-align: center; /* Centering text */
     text-decoration: none;
-    appearance: none;
+    appearance: none; /* Removing default appearance */
 }
+
+/* Hover state for input and select elements */
 input:hover, select:hover {
-	background-color: rgba(0, 0, 0, 0.70);
+    background-color: rgba(0, 0, 0, 0.70); /* Darkening background on hover */
 }
+
+/* Active state for input and select elements */
 input:active, select:active {
-	background-color: orange;
+    background-color: orange; /* Setting background color to orange on click */
 }
+
+/* Focus state for input and select elements */
 input:focus, select:focus {
-	outline: none;
+    outline: none; /* Removing outline on focus */
 }
+
+/* Styling for custom select */
 .custom-select {
-	display: inline-block;
+    display: inline-block;
 }
+
+/* Styling for select element inside custom select */
 .custom-select select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -65,68 +83,78 @@ input:focus, select:focus {
     background-repeat: no-repeat;
     background-position: 125px center;
 }
+
+/* Styling for message container */
 #Message-Container {
-    visibility: hidden;
-    color: white;
+    visibility: hidden; /* Initially hiding the message container */
+    color: white; /* Setting text color */
     display: block;
-    width: 100vw;
-    height: 100vh;
+    width: 100vw; /* Setting width */
+    height: 100vh; /* Setting height */
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.30);
-    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.30); /* Setting background color */
+    z-index: 1; /* Setting z-index */
 }
+
+/* Styling for message inside message container */
 #Message-Container #message {
-    width: 300px;
-    height: 300px;
+    width: 300px; /* Setting width */
+    height: 300px; /* Setting height */
     position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-left: -150px;
-    margin-top: -150px;
+    top: 50%; /* Centering vertically */
+    left: 50%; /* Centering horizontally */
+    margin-left: -150px; /* Adjusting for half of width */
+    margin-top: -150px; /* Adjusting for half of height */
 }
+
+/* Styling for main page */
 #page {
-	text-align: center;
-	height: auto;
-	width: auto;
-	margin: auto;
+    text-align: center; /* Centering text */
+    height: auto;
+    width: auto;
+    margin: auto; /* Centering horizontally */
 }
+
+/* Styling for menu */
 #page #menu {
-    margin: auto;
-    padding: 10px;
-    height: 65px;
-    box-sizing: border-box;
+    margin: auto; /* Centering horizontally */
+    padding: 10px; /* Adding padding */
+    height: 65px; /* Setting height */
+    box-sizing: border-box; /* Including padding and border in the element's total width and height */
 }
+
+/* Styling for heading inside menu */
 #page #menu h1 {
     margin: 0;
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 3.2rem;
+    margin-bottom: 10px; /* Adding bottom margin */
+    font-weight: 600; /* Setting font weight */
+    font-size: 3.2rem; /* Setting font size */
 }
+
+/* Styling for view inside page */
 #page #view {
     position: absolute;
-    top: 65px;
+    top: 65px; /* Positioning below the menu */
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
+    width: 100%; /* Setting width */
     height: auto;
 }
+
+/* Styling for border class */
 .border {
-    border: 10px black solid;
-    border-radius: 10px;
+    border: 10px black solid; /* Adding black border */
+    border-radius: 10px; /* Adding border radius */
 }
 
-#instructions {
-    margin-top: 425px;
-}
- 
-/* Extra small devices (phones, 600px and down) */
+/* Media query for extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 400px) {
-	input, select {
-	    width: 120px;
-	}
+    input, select {
+        width: 120px; /* Adjusting width for smaller screens */
+    }
 }
