--- a/maze.css
+++ b/maze.css
@@ -10,7 +10,7 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #ebf;
+    background-color: #fff;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -28,7 +28,7 @@ html, body {
 #mazeContainer #mazeCanvas {
     margin: 0;
     display: block;
-    border: solid 2px green;
+    border: solid 2px black;
     height: 400px;
 }
 input, select {
@@ -50,7 +50,7 @@ input:hover, select:hover {
 	background-color: rgba(0, 0, 0, 0.70);
 }
 input:active, select:active {
-	background-color: orange;
+	background-color: black;
 }
 input:focus, select:focus {
 	outline: none;
