--- a/maze.css
+++ b/maze.css
@@ -13,7 +13,7 @@ html, body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #fff;
+    background-color: #ebf;
     font-family: 'Poppins', sans-serif;
 }
 
